--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-jenkins",
   "version": "1.0.0",
-  "description": "A simple Node.js project for Jenkins, SonarQube, and Nessus",
+  "description": "A simple Node.js project for Jenkins, SonarQube, and Nexus",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
